--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,13 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>6.1.0.Final</version>
+    </dependency>
+
+
 
   </dependencies>
 
