improve profile url mapping and fix default profile

--- a/src/main/recources/application.properties
+++ b/src/main/recources/application.properties
@@ -6,9 +6,4 @@ mail.password=a5275951
 mail.properties.mail.smtp.auth=true
 mail.properties.mail.smtp.starttls.enable=true
 
-# Database properties
-#todo:
-db.driverClass=
-db.jdbcUrl=
-db.user=
-db.password=
+spring.mvc.favicon.enabled=false
