apply spring data

--- a/src/main/recources/application.properties
+++ b/src/main/recources/application.properties
@@ -1,9 +1,30 @@
-# Email properties
-mail.host=smtp.gmail.com
-mail.port=587
-mail.username=testemail2560978421343
-mail.password=a5275951
-mail.properties.mail.smtp.auth=true
-mail.properties.mail.smtp.starttls.enable=true
+## default connection pool
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
 
-spring.mvc.favicon.enabled=false
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=0000
+
+#drop n create table again, good for testing, comment this in production
+#todo
+#spring.jpa.hibernate.ddl-auto=create
+
+# Email properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=testemail2560978421343
+spring.mail.password=a5275951
+
+# Other email properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
